# python-project-52

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
labels/: forms.py  models.py  urls.py
labels/migrations/: 0001_initial.py
labels/templates/labels/: label_create.html  label_delete.html  labels_list.html
locale/ru/LC_MESSAGES/: django.mo  django.po
main_page/: views.py
main_page/templates/main_page/: base.html  index.html  login.html
statuses/: forms.py  models.py  views.py
statuses/templates/statuses/: status_create.html  status_delete.html  status_edit.html  statuses_list.html
task_manager/: asgi.py  db.sqlite3  messages.py  settings.py  urls.py  utils.py  wsgi.py
task_manager/labels/: forms.py  urls.py  views.py
task_manager/main_page/: urls.py  views.py
task_manager/statuses/: forms.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/task_manager/: messages.py  settings.py  urls.py  utils.py
task_manager/tasks/: filters.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0003_tasks_executor.py  0004_tasks_made_by.py  0005_labelrelativity_tasks_labels.py
task_manager/users/: forms.py  models.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
tasks/: filters.py  forms.py  views.py
tasks/migrations/: 0002_remove_tasks_executor.py
tasks/templates/tasks/: task_detail.html  tasks_create.html  tasks_delete.html  tasks_list.html
users/: forms.py
users/templates/users/: user_create.html  user_delete.html  user_update.html  (+1 more)
(+13 files in other folders)
