[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "task-manager"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
django-bootstrap4 = "^22.3"
python-dotenv = "^1.0.0"
django-filter = "^23.2"
rollbar = "^0.16.3"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"